--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "start": "vite --port 3000 --open --host"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.2.2",
     "vite": "^3.2.0"
   }
 }
